# finance-api

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  finance-api-csharp.csproj  main.cpp  make.sh
migrations/: create-despesas-table.sql  create-users-table.sql
src/: Main.cs  Startup.cs  database.cpp  expense_repository.cpp  main.cpp  repository.cpp
src/Database/: Connection.cs
src/Models/: Expense.cs
src/Repositories/: ExpenseRepository.cs
src/Structs/: Expense.cs
src/headers/: database.h  expense.h  expense_repository.h  repository.h
